@@ -14,6 +14,7 @@ Enhancements:
 
 Fixes:
 
+* Fix schedule run in case cron can't run on fix hours
 * Fix contact create with birthdate age 0
 * Fix contact link create on job queue
 * Fix /settings/dav route
